exports[`GameStats should render correctly given a GAME_IDLE state 1`] = `
<div
  className="gPhJsb">
  <div
    className="fyeoun">
    Moves counter: 
    12
  </div>
  <div
    className="fyeoun">
    Time elapsed: 
    60
    s
  </div>
</div>
`;

exports[`GameStats should render correctly given a GAME_OVER state 1`] = `
<div
  className="gPhJsb">
  <div
    className="fyeoun">
    Moves counter: 
    30
  </div>
  <div
    className="fyeoun">
    Time elapsed: 
    120
    s
  </div>
  <div
    className="gameStateMessage">
    Congrats!
  </div>
</div>
`;

exports[`GameStats should render correctly given a GAME_STARTED state 1`] = `
<div
  className="gPhJsb">
  <div
    className="fyeoun">
    Moves counter: 
    0
  </div>
  <div
    className="fyeoun">
    Time elapsed: 
    1
    s
  </div>
</div>
`;
